# decoder

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CMakeLists.txt  CNAME  MANIFEST.in  README.md  commonConfig.js  index.html  library.json  library.properties  package-lock.json  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: PR_build.yml  build.yml  codeql-analysis.yml  manual_docs.yml  manual_test-pypi.yml  publish.yml  publish_docs.yml  stale.yml
assets/css/: 0.styles.255adc17.css  0.styles.25df7dd7.css  0.styles.72c9813a.css  0.styles.e43f3e2e.css
assets/js/: 10.000b9ffd.js  10.327d4380.js  10.38ac83be.js  10.3c36350f.js  10.513aba42.js  10.55a6c920.js  10.56cf9c36.js  10.5a51ab84.js  10.616adb62.js  10.76b2c956.js  10.7ba1b02e.js  10.81c2616e.js  10.87ec6b8c.js  10.8b7c632e.js  10.8fefdb45.js  10.907017f9.js  10.91b7fdd8.js  10.9599f487.js  10.97a4614e.js  10.98832c94.js  10.aa703ae5.js  10.ae33d046.js  10.b279aa3b.js  10.b9432c8b.js  10.dbe466a2.js  10.dc220f7e.js  10.eb9d1aaf.js  10.ed85af0e.js  10.fbf49797.js  100.173087b9.js  100.28ae85b6.js  100.2bd08ad0.js  100.39174aea.js  100.47eeb01d.js  100.4ef208fd.js  100.72e27573.js  100.8441a357.js  100.a75d872a.js  100.a9d603d9.js  100.b0f3deed.js  (+3479 more)
devices/: ABN03.html  ABN07.html  ABTemp.html  Amazfit.html  Amphiro.html  AppleDevice.html  AppleWatch.html  Aranet4.html  BC08.html  BM1in1.html  BM2.html  BM3in1.html  BM4in1.html  BM6.html  BM_V23.html  BPARASITE.html  BWBSDOO.html  CGC1.html  CGD1.html  CGDK2.html  CGDN1.html  CGG1.html  CGH1.html  CGP1W.html  CGP23W.html  CGPR1.html  GAEN.html  H5055.html  H5072.html  H5074.html  H5075.html  H5100.html  H5101.html  H5102.html  H5104.html  H5105.html  H5106.html  H5174.html  H5177.html  H5179.html  (+81 more)
docs/: README.md
docs/.vuepress/: config.js
docs/.vuepress/styles/: index.styl
docs/devices/: ABN03.md  ABN07.md  ABTemp.md  Amazfit.md  Amphiro.md  AppleDevice.md  AppleWatch.md  Aranet4.md  BC08.md  BM1in1.md  BM2.md  BM3in1.md  BM4in1.md  BM6.md  BM_V23.md  BPARASITE.md  BWBSDOO.md  CGC1.md  CGD1.md  CGDK2.md  CGDN1.md  CGG1.md  CGH1.md  CGP1W.md  CGP23W.md  CGPR1.md  FEASY.MD  GAEN.md  H5055.md  H5072.md  H5074.md  H5075.md  H5100.md  H5101.md  H5102.md  H5104.md  H5105.md  H5106.md  H5174.md  H5177.md  (+88 more)
docs/participate/: adding-decoders.md  development.md  support.md
docs/use/: ESP32.md  include.md  python.md  use.md
examples/go/: README.md  decoder.go  dummy.cpp
examples/python/: README.md  ScanAndDecode.py
include/shared/: theengs.h
participate/: adding-decoders.html  development.html  support.html
python/: CMakeLists.txt  MANIFEST.in  README.md  setup.py
python/TheengsDecoder/: __init__.py  _decoder.cpp
scripts/: check_decoder.py  remove_arduino_json.py
src/: CGD1_json.h  CGDK2_json.h  CGG1_json.h  CGH1_json.h  CGP1W_json.h  CGPR1_json.h  H5072_json.h  HHCCJCY01HHCC_json.h  IBS_TH1_json.h  IBS_TH2_json.h  JQJCY01YM_json.h  LYWSD02_json.h  LYWSD03MMC_ATC_json.h  LYWSDCGQ_json.h  MUE4094RT_json.h  Miband_json.h  Miflora_json.h  Miscale_json.h  TPMS_10CA8F_json.h  TPMS_json.h  WS02_json.h  XMTZC04HM_json.h  XMTZC05HM_json.h  decoder.cpp  decoder.h  decoder_c.cpp  device_json.h  devices.h  iBeacon_json.h  iNode_json.h  miflora_json.h
src/devices/: ABN03_json.h  ABN07_json.h  ABTemp_json.h  APPLEDEVICE_json.h  APPLEHOMEPOD_json.h  APPLEWATCH_json.h  APPLE_json.h  ARANET4_json.h  Amphiro_json.h  BC08_json.h  BM1IN1_json.h  BM2_json.h  BM3IN1_json.h  BM4IN1_json.h  BM6_json.h  BM_V23_json.h  BPARASITE_json.h  BWBSDOO_json.h  Battery_json.h  CGD1_json.h  CGDK2_json.h  CGDN1_json.h  CGG1_ATC_json.h  CGG1_PVVX_json.h  CGG1_json.h  CGH1_json.h  CGP1W_json.h  CGP23W_json.h  CGPR1_json.h  FEASY_json.h  GAEN_json.h  H5055_json.h  H5072_json.h  H5074_json.h  H5075_json.h  H5102_json.h  H5106_json.h  H5179_json.h  HHCCJCY01HHCC_json.h  HHCCJCY10_json.h  (+93 more)
tests/: CMakeLists.txt  CompileOptions.cmake
tests/BLE/: CMakeLists.txt  test_ble.cpp
tests/BLE_fail/: CMakeLists.txt  test_ble_fail.cpp
tests/python_ble/: decoder_test.py
use/: ESP32.html  include.html  python.html  use.html
(+2 files in other folders)
